--- a/styles/main.css
+++ b/styles/main.css
@@ -1,23 +1,21 @@
 @font-face {
-  font-family: 'Inter var';
+  font-family: "JetBrains Mono";
   font-style: normal;
   font-weight: 100 900;
   font-display: block;
-  src: url(/fonts/JetBrainsMono-Medium.woff2) format('woff2');
+  src: url(/fonts/JetBrainsMono-Regular.woff2) format('woff2');
 }
 @font-face {
-  font-family: 'Inter var';
+  font-family: "JetBrains Mono";
   font-style: italic;
   font-weight: 100 900;
   font-display: block;
-  src: url(/fonts/JetBrainsMono-MediumItalic.woff2) format('woff2');
-  font-named-instance: 'Italic';
+  src: url(/fonts/JetBrainsMono-Italic.woff2) format('woff2');
 }
 
 body {
-  font-family: 'Inter var', system-ui, -apple-system, BlinkMacSystemFont,
-    'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
-    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  font-family: 'JetBrains Mono', system-ui, -apple-system, BlinkMacSystemFont,
+    'Segoe UI', Roboto;
   -webkit-font-smoothing: subpixel-antialiased;
   font-feature-settings: 'case' 1, 'cpsp' 1, 'dlig' 1, 'cv01' 1, 'cv02',
     'cv03' 1, 'cv04' 1;
